clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__simple_commands__parse_command_with_backtick_substitution.snap
---
source: clash-brush-parser/src/parser/tests/simple_commands.rs
assertion_line: 132
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "echo `whoami`",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "`whoami`",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
