clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__simple_commands__parse_ls_la_home.snap
---
source: clash-brush-parser/src/parser/tests/simple_commands.rs
assertion_line: 66
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "ls -la /home",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "ls",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-la",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "/home",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
