clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__simple_commands__parse_true.snap
---
source: clash-brush-parser/src/parser/tests/simple_commands.rs
assertion_line: 44
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "true",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "true",
                  loc: "[location]",
                )),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
